--- a/src/pages/Admin/components/AdminCoupons/CouponEdit.module.css
+++ b/src/pages/Admin/components/AdminCoupons/CouponEdit.module.css
@@ -177,7 +177,7 @@
 }
 
 .dropdownOption:hover {
-  background-color: var(--teal-lighter);
+  background-color: var(--button-hover-bg);
   color: var(--purple);
 }
 
