--- a/src/pages/UserAccount/UserAccount.module.css
+++ b/src/pages/UserAccount/UserAccount.module.css
@@ -79,11 +79,11 @@
 }
 
 .tab:hover {
-  background-color: var(--bg-light);
+  background-color: var(--button-hover-bg);
 }
 
 .tabActive {
-  background-color: var(--teal-lighter);
+  background-color: var(--button-hover-bg);
 }
 
 .tabIcon {
