--- a/src/pages/Admin/components/AdminDomains/DomainEdit.module.css
+++ b/src/pages/Admin/components/AdminDomains/DomainEdit.module.css
@@ -169,7 +169,7 @@
 }
 
 .dropdownOption:hover {
-  background-color: var(--teal-lighter);
+  background-color: var(--button-hover-bg);
   color: var(--purple);
 }
 
