--- a/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
+++ b/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
@@ -22,7 +22,7 @@
   font-size: 2rem;
   font-weight: 600;
   margin: 0;
-  color: #000;
+  color: var(--text-primary);
   font-family: 'Inter', sans-serif;
   line-height: 1.2;
 }
@@ -39,7 +39,7 @@
 .bulletItem {
   font-size: 1.125rem;
   font-weight: 400;
-  color: #333;
+  color: var(--text-secondary);
   font-family: 'Inter', sans-serif;
   line-height: 1.6;
   position: relative;
@@ -62,7 +62,7 @@
   position: relative;
   border-radius: 15px;
   overflow: hidden;
-  background-color: #000;
+  background-color: var(--black);
   cursor: pointer;
   outline: none;
   border: none;
