--- a/src/pages/Home/components/FeatureSet/FeatureSet.module.css
+++ b/src/pages/Home/components/FeatureSet/FeatureSet.module.css
@@ -9,7 +9,7 @@
   font-weight: 500;
   text-align: center;
   margin-bottom: 3rem;
-  color: #000;
+  color: var(--text-primary);
   font-family: 'Inter', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.05em;
