--- a/src/pages/Home/components/FeatureSet/VideoModal/VideoModal.module.css
+++ b/src/pages/Home/components/FeatureSet/VideoModal/VideoModal.module.css
@@ -29,7 +29,7 @@
 }
 
 .modalContent {
-  background-color: #000;
+  background-color: var(--black);
   border-radius: 30px;
   max-width: 90vw;
   max-height: 90vh;
@@ -79,7 +79,7 @@
   right: 1rem;
   background: rgba(255, 255, 255, 0.2);
   border: none;
-  color: white;
+  color: #ffffff;
   font-size: 2rem;
   width: 40px;
   height: 40px;
@@ -109,7 +109,7 @@
 .modalTitle {
   padding: 1.5rem 1.5rem 1rem;
   margin: 0;
-  color: white;
+  color: #ffffff;
   font-size: 1.5rem;
   font-weight: 600;
   font-family: 'Inter', sans-serif;
