--- a/src/pages/Home/components/Promo/PromoText/PromoText.module.css
+++ b/src/pages/Home/components/Promo/PromoText/PromoText.module.css
@@ -15,14 +15,14 @@
   font-weight: 500;
   line-height: 1.2;
   margin: 0;
-  color: #000;
+  color: var(--text-primary);
   font-family: 'Inter', sans-serif;
 }
 
 .description {
   font-size: 1.125rem;
   line-height: 1.6;
-  color: #333;
+  color: var(--text-secondary);
   margin: 0;
   font-family: 'Inter', sans-serif;
 }
