--- a/src/shared/components/ActionMenu/ActionMenu.module.css
+++ b/src/shared/components/ActionMenu/ActionMenu.module.css
@@ -33,8 +33,8 @@
 }
 
 .menuButton:hover {
-  background: var(--bg-light);
-  color: var(--text-secondary);
+  background: var(--button-hover-bg);
+  color: var(--teal);
 }
 
 .menuButton svg {
@@ -122,7 +122,7 @@
 }
 
 .popoverButton:hover {
-  background-color: var(--teal-lighter);
+  background-color: var(--button-hover-bg);
   color: var(--teal);
 }
 
@@ -131,7 +131,7 @@
 }
 
 .popoverButtonMove:hover {
-  background-color: var(--teal-lighter);
+  background-color: var(--button-hover-bg);
   color: var(--teal);
 }
 
@@ -143,10 +143,14 @@
 }
 
 .popoverButtonDelete {
-  color: var(--red);
+  color: var(--text-tertiary);
 }
 
 .popoverButtonDelete:hover {
-  background-color: var(--light-red);
-  color: var(--red-dark);
+  background-color: var(--button-hover-bg);
+  color: var(--red);
+}
+
+.popoverButtonDelete svg {
+  transition: color 0.2s ease;
 }
