--- a/src/pages/UserAccount/components/LanguageDropdown.module.css
+++ b/src/pages/UserAccount/components/LanguageDropdown.module.css
@@ -86,6 +86,7 @@
   font-size: 14px;
   color: var(--gray-900);
   font-family: 'Inter', sans-serif;
+  border-bottom: 1px solid var(--very-light-purple);
 }
 
 .dropdownItem:hover {
@@ -104,5 +105,6 @@
 
 .dropdownItem:last-child {
   border-radius: 0 0 10px 10px;
+  border-bottom: none;
 }
 
